[package]
name = "ydcv-rs"
description = "A rust version of YouDao Console Version"
repository = "https://github.com/farseerfc/ydcv-rs"
readme = "README.md"
license = "GPL-2.0"
version = "0.4.7"
authors = ["Jiachen Yang <farseerfc@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "^4.0", features = ["derive"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
env_logger = "^0.10"
rustyline = "^10.0"
log = "^0.4"
lazy_static = "^1.4"
atty = "^0.2"
htmlescape = "0.3"
reqwest = {version = "0.11", features=["blocking", "socks"]}
copypasta = {version = "0.8", optional = true}

[target.'cfg(windows)'.dependencies]
winrt-notification =    {version = "^0.5", optional = true}

[target.'cfg(unix)'.dependencies]
notify-rust =           {version = "^4.6", optional = true}

[features]
default = [ "notify", "clipboard" ]
notify = ["notify-rust", "winrt-notification"]
clipboard = ["copypasta"]

[profile.release]
lto = true
